Fix bottom edge gap on buttons

--- a/src/components/UI/AddToList.module.scss
+++ b/src/components/UI/AddToList.module.scss
@@ -1,7 +1,7 @@
 .AddToCart {
   position:sticky;
-  bottom:.2em;
-  padding:1em .2em .2em .2em;
+  bottom:0;
+  padding:1em .2em .7em .2em;
   margin-top:-.5em;
   background: linear-gradient(0deg, rgba(255,255,255,1) 75%, rgba(255,255,255,0.11558126668636204) 100%); 
   button {
